# python-melnikov

./: .pre-commit-config.yaml  pyproject.toml  sample.xml  setup.cfg
melnikov/problems/: A.py  B.py  C.py  D.py  E.py  F.py
melnikov/tests/: A.py  B.py  C.py  D.py  E.py  F.py
